[project]
name = "triton-rfdetr-pytorch-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av==15.0.0",
    "opencv-python==4.10.0.84",
    "pandas>=2.3.2",
    "rfdetr",
    "tabulate>=0.9.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tritonclient[all]>=2.60.0",
]

[tool.uv.sources]
rfdetr = { git = "https://github.com/roboflow/rf-detr.git" }
